--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Tk-ForDummies-Graph
-version: 1.01
+version: 1.02
 author:
   - 'Djibril Ousmanou <djibrilo@yahoo.fr>'
 abstract: Extension of Canvas widget to create a graph like GDGraph.
@@ -14,16 +14,19 @@ meta-spec:
 provides:
   Tk::ForDummies::Graph:
     file: lib/Tk/ForDummies/Graph.pm
-    version: 1.01
+    version: 1.02
+  Tk::ForDummies::Graph::Areas:
+    file: lib/Tk/ForDummies/Graph/Areas.pm
+    version: 1.00
   Tk::ForDummies::Graph::Bars:
     file: lib/Tk/ForDummies/Graph/Bars.pm
-    version: 1.00
+    version: 1.01
   Tk::ForDummies::Graph::Lines:
     file: lib/Tk/ForDummies/Graph/Lines.pm
-    version: 1.00
+    version: 1.01
   Tk::ForDummies::Graph::Pie:
     file: lib/Tk/ForDummies/Graph/Pie.pm
-    version: 1.00
+    version: 1.01
   Tk::ForDummies::Graph::Utils:
     file: lib/Tk/ForDummies/Graph/Utils.pm
     version: 1.00
