Import of DJIBEL/Tk-ForDummies-Graph-1.08 from CPAN.
gitpan-cpan-distribution: Tk-ForDummies-Graph
gitpan-cpan-version:      1.08
gitpan-cpan-path:         DJIBEL/Tk-ForDummies-Graph-1.08.tar.gz
gitpan-cpan-author:       DJIBEL
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 ---
 name: Tk-ForDummies-Graph
-version: 1.07
+version: 1.08
 author:
-  - 'Djibril Ousmanou <djibrilo@yahoo.fr>'
+  - 'Djibril Ousmanou <djibel@cpan.org>'
 abstract: Extension of Canvas widget to create a graph like GDGraph.
 license: perl
 resources:
@@ -13,7 +13,7 @@ build_requires:
 provides:
   Tk::ForDummies::Graph:
     file: lib/Tk/ForDummies/Graph.pm
-    version: 1.07
+    version: 1.08
   Tk::ForDummies::Graph::Areas:
     file: lib/Tk/ForDummies/Graph/Areas.pm
     version: 1.05
@@ -25,14 +25,14 @@ provides:
     version: 1.03
   Tk::ForDummies::Graph::Lines:
     file: lib/Tk/ForDummies/Graph/Lines.pm
-    version: 1.06
+    version: 1.07
   Tk::ForDummies::Graph::Pie:
     file: lib/Tk/ForDummies/Graph/Pie.pm
     version: 1.05
   Tk::ForDummies::Graph::Utils:
     file: lib/Tk/ForDummies/Graph/Utils.pm
-    version: 1.01
-generated_by: Module::Build version 0.31012
+    version: 1.02
+generated_by: Module::Build version 0.32
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
