Import of DJIBEL/Tk-ForDummies-Graph-1.10 from CPAN.
gitpan-cpan-distribution: Tk-ForDummies-Graph
gitpan-cpan-version:      1.10
gitpan-cpan-path:         DJIBEL/Tk-ForDummies-Graph-1.10.tar.gz
gitpan-cpan-author:       DJIBEL
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Tk-ForDummies-Graph
-version: 1.09
+version: 1.10
 author:
   - 'Djibril Ousmanou <djibel@cpan.org>'
 abstract: Extension of Canvas widget to create a graph like GDGraph.
@@ -8,30 +8,31 @@ license: perl
 resources:
   license: http://dev.perl.org/licenses/
 build_requires:
+  POSIX: 0
   Test::More: 0
   Tk: 800
 provides:
   Tk::ForDummies::Graph:
     file: lib/Tk/ForDummies/Graph.pm
-    version: 1.09
+    version: 1.10
   Tk::ForDummies::Graph::Areas:
     file: lib/Tk/ForDummies/Graph/Areas.pm
-    version: 1.05
+    version: 1.06
   Tk::ForDummies::Graph::Bars:
     file: lib/Tk/ForDummies/Graph/Bars.pm
-    version: 1.06
+    version: 1.07
   Tk::ForDummies::Graph::Boxplots:
     file: lib/Tk/ForDummies/Graph/Boxplots.pm
-    version: 1.03
+    version: 1.04
   Tk::ForDummies::Graph::Lines:
     file: lib/Tk/ForDummies/Graph/Lines.pm
-    version: 1.07
+    version: 1.08
   Tk::ForDummies::Graph::Pie:
     file: lib/Tk/ForDummies/Graph/Pie.pm
     version: 1.05
   Tk::ForDummies::Graph::Utils:
     file: lib/Tk/ForDummies/Graph/Utils.pm
-    version: 1.03
+    version: 1.04
 generated_by: Module::Build version 0.33
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
