--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'Extension of Canvas widget to create a graph like GDGraph.'
+abstract: 'DEPRECATED : now use Tk::Chart.'
 author:
   - 'Djibril Ousmanou <djibel@cpan.org>'
 build_requires:
@@ -17,10 +17,10 @@ name: Tk-ForDummies-Graph
 provides:
   Tk::ForDummies::Graph:
     file: lib/Tk/ForDummies/Graph.pm
-    version: 1.13
+    version: 1.14
   Tk::ForDummies::Graph::Areas:
     file: lib/Tk/ForDummies/Graph/Areas.pm
-    version: 1.09
+    version: 1.10
   Tk::ForDummies::Graph::Bars:
     file: lib/Tk/ForDummies/Graph/Bars.pm
     version: 1.10
@@ -35,10 +35,10 @@ provides:
     version: 1.03
   Tk::ForDummies::Graph::Pie:
     file: lib/Tk/ForDummies/Graph/Pie.pm
-    version: 1.07
+    version: 1.08
   Tk::ForDummies::Graph::Utils:
     file: lib/Tk/ForDummies/Graph/Utils.pm
     version: 1.08
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.13
+version: 1.14
